--- a/clients-app/src/app/clients/clients-form/clients-form.component.html
+++ b/clients-app/src/app/clients/clients-form/clients-form.component.html
@@ -8,14 +8,14 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label>ID:</label>
-                    <input type="text" class="form-control" disabled=true/>
+                    <input type="text" class="form-control" [ngModel]="client.id" name="id" disabled=true/>
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Data Cadastro:</label>
-                    <input type="text" class="form-control" disabled=true/>
+                    <input type="text" class="form-control" [ngModel]="client.registrationDate" name="registrationDate" disabled=true/>
                 </div>
             </div>
         </div>
@@ -24,21 +24,21 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label>Nome: *</label>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control" [(ngModel)]="client.name" name="name" />
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
-                    <label>Cpf: *</label>
-                    <input type="text" class="form-control" />
+                    <label>CPF: *</label>
+                    <input type="text" class="form-control" [(ngModel)]="client.cpf" name="cpf" />
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-2">
-                <button type="submit" class="btn btn-success">
+                <button type="submit" class="btn btn-success" (click)="clicar()">
                     <i class="fa fa-save"></i> Salvar
                 </button>    
             </div>
