--- a/clients-app/src/app/clients/clients-list/clients-list.component.html
+++ b/clients-app/src/app/clients/clients-list/clients-list.component.html
@@ -4,6 +4,17 @@
 </ol>
 <div class="container">
     <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-success" role="alert" *ngIf="successMessage">
+                {{ successMessage }}
+            </div>
+            <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+                {{ errorMessage }}
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-2">
             <button class="btn btn-warning" (click)="newRegistration()">
                 <i class="fa fa-plus"></i>Novo
@@ -33,10 +44,31 @@
                             <button class="btn btn-primary" routerLink="/clients-form/{{ client.id }}">
                                 <i class="fa fa-edit"></i>
                             </button>
+
+                            <button class="btn btn-danger"  (click)="prepareDeletion(client)"  data-toggle="modal" data-target="#deletionModal">
+                                <i class="fa fa-trash"></i>
+                            </button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-    </div>    
+    </div> 
+    
+    <div id="deletionModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Confirmação</h4>
+                </div>
+                <div class="modal-body" *ngIf="selectedClient">
+                    Deseja mesmo deletar o(a) cliente {{ selectedClient.name }}?
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success" (click)="deleteClient()" data-dismiss="modal">Sim</button>
+                    <button class="btn btn-danger" data-dismiss="modal">Não</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
