--- a/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -1,1 +1,35 @@
-<p>provided-service-list works!</p>
+<h1 class="mt-4">Serviços</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item active">Consulta</li>
+</ol>
+<div class="container">
+    <form #searchServiceForm="ngForm" (submit)="searchService()">
+        <div class="row">
+            <div class="col-md-6">
+                <label for="nameInput">Nome cliente: </label>
+                <input type="text" [(ngModel)]="name" class="form-control" name="name" id="nameInput">
+            </div>
+
+            <div class="col-md-6">
+                <label for="monthInput">Mês: </label>
+                <select [(ngModel)]="month" name="month" class="form-control">
+                    <option value="">Selecione o mês desejado...</option>
+                    <option *ngFor="let month of months" [value]="month">
+                        {{ month }}
+                    </option>
+                </select>
+            </div>
+        </div>
+
+        <br/>
+
+        <div class="row">
+            <div class="col-md-3">
+                <button type="submit" class="btn btn-primary">
+                    <i class="fa fa-search"></i>
+                    Consultar
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
