Finalizando a Pesquisa de Serviços

--- a/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
+++ b/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-4">Serviços</h1>
+<h1 class="mt-4">Serviços Prestados</h1>
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Novo</li>
 </ol>
