--- a/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-4">Serviços</h1>
+<h1 class="mt-4">Serviços Prestados</h1>
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Consulta</li>
 </ol>
@@ -32,4 +32,30 @@
             </div>
         </div>
     </form>
+    <br/>
+    <div class="row">
+        <div class="alert alert-warning" role="alert" *ngIf="message">
+            {{ message }}
+        </div>
+        <div class="col-md-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Cliente:</th>
+                        <th>Descrição:</th>
+                        <th>Valor:</th>
+                        <th>Data:</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let s of list">
+                        <td>{{ s.client.name }}</td>
+                        <td>{{ s.description }}</td>
+                        <td>{{ s.value }}</td>
+                        <td>{{ s.date }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
