Finalizando Serviços Prestados

--- a/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
+++ b/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
@@ -58,7 +58,13 @@
             <div class="col-md-3">
                 <button class="btn btn-success" type="submit">
                     <i class="fa fa-save"></i>
-                    Salvar</button>
+                    Salvar
+                </button>
+
+                <button type="button" class="btn btn-danger ml-1" routerLink="/provided-service-list">
+                    <i class="fa fa-arrow-alt-circle-left"></i> 
+                    Voltar
+                </button>
             </div>
         </div>
     </form>
