--- a/clients-app/src/app/clients/clients-list/clients-list.component.html
+++ b/clients-app/src/app/clients/clients-list/clients-list.component.html
@@ -45,7 +45,7 @@
                                 <i class="fa fa-edit"></i>
                             </button>
 
-                            <button class="btn btn-danger"  (click)="prepareDeletion(client)"  data-toggle="modal" data-target="#deletionModal">
+                            <button class="btn btn-danger ml-1"  (click)="prepareDeletion(client)"  data-toggle="modal" data-target="#deletionModal">
                                 <i class="fa fa-trash"></i>
                             </button>
                         </td>
