--- a/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -29,6 +29,11 @@
                     <i class="fa fa-search"></i>
                     Consultar
                 </button>
+
+                <button type="button" class="btn btn-warning ml-1" routerLink="/provided-service-form">
+                    <i class="fa fa-plus"></i>
+                    Novo
+                </button>
             </div>
         </div>
     </form>
