Trabalhando com rotas filhas

--- a/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
+++ b/clients-app/src/app/provided-service/provided-service-form/provided-service-form.component.html
@@ -61,7 +61,7 @@
                     Salvar
                 </button>
 
-                <button type="button" class="btn btn-danger ml-1" routerLink="/provided-service-list">
+                <button type="button" class="btn btn-danger ml-1" routerLink="/provided-services/list">
                     <i class="fa fa-arrow-alt-circle-left"></i> 
                     Voltar
                 </button>
