--- a/clients-app/src/app/template/sidebar/sidebar.component.html
+++ b/clients-app/src/app/template/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
                         Home
                     </a>
                 <div class="sb-sidenav-menu-heading">Cadastros</div>
-                <a class="nav-link collapsed" routerLink="/clients-list" 
+                <a class="nav-link collapsed" routerLink="/clients" 
                     data-toggle="collapse" data-target="#collapseLayouts" 
                     aria-expanded="false" aria-controls="collapseLayouts">
                     <div class="sb-nav-link-icon">
@@ -19,7 +19,7 @@
                     Clientes
                 </a>
 
-                <a class="nav-link collapsed" routerLink="/provided-service-list" 
+                <a class="nav-link collapsed" routerLink="/provided-services" 
                     data-toggle="collapse" data-target="#collapseLayouts" 
                     aria-expanded="false" aria-controls="collapseLayouts">
                     <div class="sb-nav-link-icon">
