--- a/clients-app/src/app/clients/clients-list/clients-list.component.html
+++ b/clients-app/src/app/clients/clients-list/clients-list.component.html
@@ -41,7 +41,7 @@
                         <td>{{ client.cpf }}</td>
                         <td>{{ client.registrationDate }}</td>
                         <td>
-                            <button class="btn btn-primary" routerLink="/clients-form/{{ client.id }}">
+                            <button class="btn btn-primary" routerLink="/clients/form/{{ client.id }}">
                                 <i class="fa fa-edit"></i>
                             </button>
 
