--- a/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/clients-app/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -30,7 +30,7 @@
                     Consultar
                 </button>
 
-                <button type="button" class="btn btn-warning ml-1" routerLink="/provided-service-form">
+                <button type="button" class="btn btn-warning ml-1" routerLink="/provided-services/form">
                     <i class="fa fa-plus"></i>
                     Novo
                 </button>
