Configurando o Spring Security

--- a/clients-app/src/app/login/login.component.html
+++ b/clients-app/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                             <form #loginForm="ngForm" (submit)="onSubmit()">
                                 <div class="form-group">
                                     <label class="small mb-1">Usuário</label>
-                                    <input type="text" name="userName" [(ngModel)]="userName" class="form-control py-4" placeholder="Digite seu usuário">
+                                    <input type="text" name="username" [(ngModel)]="username" class="form-control py-4" placeholder="Digite seu usuário">
                                 </div>
 
                                 <div class="form-group">
